Color changes. Gaps corrections. Social media size change.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,14 @@
 @import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --grey: #969696;
-    --lightBlue: #C7D4F4;
-    --blue: #4D7BF3;
+    --grey: hsl(0, 0%, 59%);
+    --lightBlue: hsl(223, 100%, 88%);
+    --blue: hsl(223, 87%, 63%);
+    --darkBlue: hsl(209, 33%, 12%);
     --hoverBlue: #7195F5;
-    --error: #B4737B;
+    --error: hsl(354, 100%, 66%)
 }
 
 body {
@@ -17,7 +19,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Libre Franklin', sans-serif;
 }
 
 header {
@@ -30,37 +32,39 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 8px;
     padding: 0 32px;
     > h1 {
         font-size: 24px;
-        font-weight: 200;
-        margin-top: 0;
+        font-weight: 300;
+        margin-top: 16px;
+        margin-bottom: 8px;
         text-align: center;
         color: var(--grey);
         > span {
-            font-weight: 900;
-            color: #000;
+            font-weight: 700;
+            color: var(--darkBlue);
         }
     }
     > h3 {
         font-weight: 300;
         margin-top: 0;
         font-size: 16px;
-        color: var(--grey);
+        color: var(--darkBlue);
     }
 }
 
-form {
+#submission > form {
     display: flex;
     flex-direction: column;
     margin: 0 32px;
     gap: 8px;
     width: 100%;
-    padding: 32px;
+    padding: 0 32px;
     box-sizing: border-box;
     input {
-        height: 50px;
-        border-radius: 25px;
+        height: 40px;
+        border-radius: 20px;
         padding-left: 36px;
         border: 1.5px solid var(--lightBlue);
     }
@@ -69,8 +73,8 @@ form {
         font-size: 16px;
     }
     button {
-        height: 50px;
-        border-radius: 25px;
+        height: 40px;
+        border-radius: 20px;
         background-color: var(--blue);
         border: none;
         color: #fff;
@@ -96,7 +100,7 @@ footer {
     margin: 0;
     > p {
         color: var(--grey);
-        size: 10px;
+        size: 8px;
         text-align: center;
     }
 }
@@ -106,14 +110,14 @@ footer {
     justify-content: center;
     gap: 16px;
     > i {
-        width: 32px;
-        height: 32px;
-        font-size: 16px;
+        width: 28px;
+        height: 28px;
+        font-size: 14px;
         color: var(--blue);
         border: 1px solid var(--grey);
         border-radius: 100%;
         text-align: center;
-        line-height: 32px;
+        line-height: 28px;
         transition-duration: 200ms;
     }
     > i:hover{
@@ -126,14 +130,18 @@ footer {
 
 @media only screen and (min-width: 775px) {
     #submission{
+        gap: 0px;
         > h1 {
             font-size: 40px;
+            margin: 16px 0;
         }
         > h3 {
+            margin: 0;
+            margin-bottom: 32px;
             font-size: 20px;
         }
     }
-    form {
+    #submission > form {
         width: 600px;
         display: grid;
         grid-template-columns: 2fr 1fr;
